--- a/index.html
+++ b/index.html
@@ -1,83 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>proj</title>
-    <link rel="stylesheet" href="/css/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Programming Languages</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <section>
-    <nav>
-        <ul>
-            <li></li>
-            <li><a href="#">home</a></li>
-            <li><div class="drop-down" id="bbbb">
-                <div class="drop-btn">
-                    <button><a href="#">download</a><img src="/images/down.png" class="down" alt=""></button>
-                    <div class="drop-content">
-                        <ul>
-                            <li><a href="https://www.python.org/downloads/">python</a></li>
-                            <li><a href="https://sourceforge.net/projects/dev-cpp/files/Binaries/Dev-C%2B%2B%204.9.9.2/devcpp-4.9.9.2_setup.exe/download">c</a> </li>
-                            <li><a href="https://c-free.soft32.com/free-download/?no_download_manager&dm=0">c++</a> </li>
-                            <li><a href="https://www.javascript.com/">java script</a> </li>
-                        </ul>
-                    </div>
-                </div>
-            </div></li>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">contact us</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        
-        <div class="pylogo"><img src="/images/logo.png" >
-            <img src="images/js-removebg-preview.png"  class="jslogo">
-            <img src="images/c-removebg-preview.png" class="clogo">
-            <img src="images/c++-removebg-preview.png"  class="cplogo">
-        <!-- <h1> <span>P</span>ython</h1> -->
-        <div class="slash"></div>
-        </div>
-        <div class="homecontent">
-<h1> <span>p</span>rogramming <span>l</span>anguages </h1>
-
-<div class="python">
-    <h2><span>p</span>ython</h2>
-    <p>Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation. Python is dynamically-typed and garbage-collected. It supports multiple programming paradigms, including structured, object-oriented and functional programming</p>
-
-</div>
-<div class="c">
-    <h2><span>c / c++</span></h2>
-<p>
-    C is a general-purpose computer programming language. It was created in the 1970s by Dennis Ritchie, and remains very widely used and influential. By design, C's features cleanly reflect the capabilities of the targeted CPUs.
-    And C++ is a high-level general-purpose programming language created by Danish computer scientist Bjarne Stroustrup as an extension of the C programming language, or "C with Classes"
-
-</p>    
-</div>
-<div class="javascript">
-    <h2><span>j</span>ava <span>s</span>cript</h2>
-<p>
-    JavaScript, often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries. 
-
-</p>    
-</div>
-        </div>
-    </div>
-  </section>
-  <footer>
-<h1> <span>&#169;</span> 2023 codewithus</h1>
-<div class="icons">
-    <img src="/images/facebook.png" class="icon1">
-    <img src="/images/twitter.png" class="icon2">
-    <img src="/images/insta.png" class="icon3">
-</div>
-<div class="pages">
+  <!-- Top Navigation -->
+  <nav>
     <ul>
-        <li><a href="#">about us</a></li>
-        <li><a href="https://instagram.com/j.p.jai_007?igshid=Mzc0YWU1OWY=">contact us</a></li>
+      <li><a href="#home">Home</a></li>
+      <li class="dropdown">
+        <a href="#">Download ▼</a>
+        <div class="dropdown-content">
+          <a href="https://www.python.org/downloads/" target="_blank">Python</a>
+          <a href="https://sourceforge.net/projects/dev-cpp/files/Binaries/Dev-C%2B%2B%204.9.9.2/devcpp-4.9.9.2_setup.exe/download" target="_blank">C (Dev-C++)</a>
+          <a href="https://c-free.soft32.com/free-download/" target="_blank">C++ (C-Free)</a>
+          <a href="https://www.javascript.com/" target="_blank">JavaScript</a>
+        </div>
+      </li>
     </ul>
-</div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container">
+    <h1><span>P</span>rogramming <span>L</span>anguages</h1>
+
+    <div class="section">
+      <h2><span>P</span>ython</h2>
+      <p>
+        Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2><span>C / C++</span></h2>
+      <p>
+        C is a general-purpose language created by Dennis Ritchie. C++ extends C with object-oriented features, created by Bjarne Stroustrup.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2><span>J</span>ava<span>S</span>cript</h2>
+      <p>
+        JavaScript powers interactive web pages and is used by 98% of websites for client-side behavior.
+      </p>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 CodeWithUs</p>
   </footer>
 </body>
 </html>
