Enhance security of external links in index.html
Added 'rel="noopener"' attribute to external links for security.

--- a/index.html
+++ b/index.html
@@ -7,25 +7,35 @@
   <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- Top Navigation -->
+  <!-- Navigation -->
   <nav>
     <ul>
       <li><a href="#home">Home</a></li>
       <li class="dropdown">
         <a href="#">Download ▼</a>
         <div class="dropdown-content">
-          <a href="https://www.python.org/downloads/" target="_blank">Python</a>
-          <a href="https://sourceforge.net/projects/dev-cpp/files/Binaries/Dev-C%2B%2B%204.9.9.2/devcpp-4.9.9.2_setup.exe/download" target="_blank">C (Dev-C++)</a>
-          <a href="https://c-free.soft32.com/free-download/" target="_blank">C++ (C-Free)</a>
-          <a href="https://www.javascript.com/" target="_blank">JavaScript</a>
+          <a href="https://www.python.org/downloads/" target="_blank" rel="noopener">Python</a>
+          <a href="https://sourceforge.net/projects/dev-cpp/files/Binaries/Dev-C%2B%2B%204.9.9.2/devcpp-4.9.9.2_setup.exe/download" target="_blank" rel="noopener">C (Dev-C++)</a>
+          <a href="https://c-free.soft32.com/free-download/" target="_blank" rel="noopener">C++ (C-Free)</a>
+          <a href="https://www.javascript.com/" target="_blank" rel="noopener">JavaScript</a>
         </div>
       </li>
     </ul>
   </nav>
 
   <!-- Main Content -->
-  <div class="container">
+  <div class="container" id="home">
     <h1><span>P</span>rogramming <span>L</span>anguages</h1>
+
+    <!-- Optional: Add logos if you want -->
+    <!--
+    <div class="logos">
+      <img src="images/logo.png" alt="Python">
+      <img src="images/js-removebg-preview.png" alt="JavaScript">
+      <img src="images/c-removebg-preview.png" alt="C">
+      <img src="images/c++-removebg-preview.png" alt="C++">
+    </div>
+    -->
 
     <div class="section">
       <h2><span>P</span>ython</h2>
